--- a/big_task_2/scss/footer.scss
+++ b/big_task_2/scss/footer.scss
@@ -5,8 +5,10 @@
     padding: 45px 0;
 
     &__column{
+        @include element_adaptive;
         display: flex;
         justify-content: space-between;
+        
         h2{
             color: white;
             font-size: 24px;
@@ -18,6 +20,9 @@
         }
 
         &__box{
+            @media screen and (max-width: $breakpoint-md) {
+                width: 90%;
+            }
             h2{
                 margin-bottom: 30px;
             }
