--- a/big_task_2/scss/header.scss
+++ b/big_task_2/scss/header.scss
@@ -16,6 +16,15 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media screen and (max-width: $breakpoint-md) {
+            display: none;
+        }
+    }
+
+    &__brick:first-child {
+        @media screen and (max-width: $breakpoint-md) {
+            display: flex;
+        }
     }
 
 
