--- a/big_task_2/scss/main.scss
+++ b/big_task_2/scss/main.scss
@@ -16,9 +16,9 @@ a:hover {
     text-decoration: none;
 }
 
-.container {
-    @include container;
-}
+// .container {
+//     @include container;
+// }
 
 img {
     width: 100%;
@@ -57,6 +57,7 @@ main {
         .box{
             max-width: 1230px;
             width: 100%;
+            @include container_adpative;
         }
     }
 }
