--- a/big_task_2/scss/question.scss
+++ b/big_task_2/scss/question.scss
@@ -26,10 +26,14 @@
     &__columns{
         display: flex;
         justify-content: space-between;
+        @include element_adaptive;
     }
 
     &__contact{
         width: 50%;
+        @media screen and (max-width: $breakpoint-md) {
+            width: 100%;
+        }
         h2{
             color: white;
             font-size: 24px;
@@ -40,6 +44,7 @@
 
         &__block{
             display: flex;
+            
             img{
                 height: 30px;
                 width: 30px;
@@ -51,6 +56,10 @@
                 color: white;
                 font-weight: 600;
                 margin: 0;
+                @media screen and (max-width: $breakpoint-md) {
+                    width: 100%;
+                    font-size: 20px;
+                }
             }
         }
 
@@ -61,7 +70,10 @@
 
     &__form{
         width: 50%;
-
+        @media screen and (max-width: $breakpoint-md) {
+            margin-top: 30px;
+            width: 100%;
+        }
         h2{
             color: white;
             font-size: 24px;
